<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Bem vindo(a) ao World of Words !</string>
    <string name="app_name">World of Words</string>
    <string name="anagrama">AnagramaHT</string>
    <string name="dicRapido">Dicionário Rápido</string>
    <string name="adedonha">Adedonha</string>
    <string name="forca">Jogo da Forca</string>
    <string name="app_name_adedonha">World of Words - Adedonha</string>
    <string name="app_name_dic">World of Words - Dicionário Rápido</string>
    

    <!-- AnagramaHT -->

    <string name="jogar">Jogar</string>
    <string name="opcoes">Opções</string>
    <string name="ajuda">Ajuda</string>
    <string name="sair">Sair</string>
    <string name="hello_app_anagrama">Bem vindo ao Anagrama HT!</string>
    <string name="sub_menu_jogar">Insira o nome do jogador</string>
    <string name="string_ajuda">Instruções e Regras do jogo</string>
    <string name="string_opcoes">Opções do jogo</string>
    <string name="confirmar">OK</string>
    <string name="cancelar">Cancelar</string>
    <string name="limpar">Limpar</string>

    <!-- RadioButton opcoes -->
    <string name="facil">Fácil</string>
    <string name="normal">Normal</string>
    <string name="dificil">Difícil</string>
    <string name="cronometro">Cronometro</string>
    <string name="enviar">Enviar</string>
    <string name="teste">teste</string>
    <string name="ranking">Ranking</string>
    <string name="voltar">Voltar</string>
    
    
    <string name="hello_app_adedonha">Bem vindo ao Adedonha!</string>
    <string name="nivel_adedonha">Configurações do jogo</string>
      <string name="conferir_adedonha">Validação das respostas</string>
    
    <string name="nome_adedonha">Nome: </string>
    <string name="objeto_adedonha">Objeto: </string>
    <string name="animal_adedonha">Animal: </string>
    <string name="fruta_adedonha">Fruta: </string>
    <string name="profissao_adedonha">Profissão: </string>
    <string name="carro_adedonha">Carro: </string>
    <string name="pais_adedonha">Cidade: </string>
    <string name="serie_adedonha">Serie: </string>
    
    <string name="tempo_adedonha">Tempo</string>
    
    
    <string name="botao_configurar_letras_adedonha">Configurar letras</string>
    <string name="botao_configurar_itens_adedonha">Configurar Itens</string>
    <string name="opcao_excluir_adedonha">Desmarque as letras não desejadas</string>
    <string name="opcao_marcar_adedonha">Marque os itens desejados</string>

    <!-- Adedonha -->

    <string name="hello_app_dic">Bem vindo ao Dicionário Rápido!</string>
    <string name="tema_dic">Escolha um tema para o jogo</string>
    <string name="servidor">Criar Novo Jogo</string>
    <string name="cliente">Conectar-se a um Jogo Existente</string>
    <string name="config_bluetooth">Configure seu bluetooth</string>
    <string name="modo_jogo">Modo de Jogo</string>
    <string name="encerrar">Encerrar</string>
    <string name="aguarda_jogadores">Aguardando Conexões</string>
    <string name="iniciar_partida">Iniciar</string>
    <string name="ranking_text">Melhores Jogadores</string>
    
    <!--  DeviceListActivity -->
    <string name="scanning">Buscando por dispositivos&#8230;</string>
    <string name="select_device">Selecione o dispositivo servidor</string>
    <string name="none_paired">Nenhum dispositivo foi pareado</string>
    <string name="none_found">Nenhum dispositivo encontrado</string>
    <string name="title_paired_devices">Dispositivos pareados</string>
    <string name="title_other_devices">Outros dispositivos disponiveis</string>
    <string name="button_scan">Busque dispositivos.</string>
    
    <string name="name_tiago">Tiago Leite</string>
    <string name="name_heitor">Heitor Meira</string>
    <string name="name_gui">Guilherme Viegas (Designer)</string>
    
    
    <color name="cor_jogo">#363636</color>
    
    <string name="about_us">Nós somos alunos da Universidade Federal de Campina Grande (UFCG) e fizemos 
        este aplicativo para a disciplina de Laboratório de Engenharia de Software onde temos o Professor 
        Tiago Massoni. 
            Obs.:Guilherme Viegas é o Designer do jogo.</string>
        
    
    <string name="about_the_game">Adedonha é um jogo destinado a pessoas que desejam 
        voltar um pouco no passado. Conhecido como "porrinha" em algumas cidades, "Stop" 
        em outras e Adedonha, na sua grande maioria, este jogo faz com que o jogador tente 
        lembrar o máximo de itens possíveis para uma determinada letra escolhida aleatoriamente. 
        
        Para isso, haverá um tempo (que poderá ser configurado) para que os jogadores coloquem 
        os seus palpites. Os itens pelos quais os jogadores deverão inserir seus palpites também 
        poderão ser configurados pelo criador do jogo. Por fim, o jogador que primeiro terminar 
        terá seus dados enviados para a tela dos outros jogadores e estes serão julgadores dos 
        palpites enviados por ele. Cada palpite desse poderá ser marcado como "Válido" ou "Inválido". 
        Para cada palpite válido, haverá um aumento na pontuação do jogador, caso contrário, uma 
        certa pontuação será reduzida da sua pontuação total.
        </string>
    
    
</resources>