<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textColor="#000000" />

    <Button
        android:id="@+id/button1"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/adedonha"
        android:textColor="#000000"
        android:textSize="19dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="30dp"
        android:text="@string/dicRapido"
        android:textColor="#000000"
        android:textSize="19dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button3"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="30dp"
        android:text="@string/forca"
        android:textColor="#000000"
        android:textSize="19dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button4"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="30dp"
        android:text="@string/anagrama"
        android:textColor="#000000"
        android:textSize="19dp"
        android:textStyle="bold" />

</LinearLayout>