<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:text="@string/hello_app" />
    
    <ImageView
        android:id="@+id/imageViewTelaPrincipal"
        android:contentDescription="@string/ajuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:src="@drawable/tela_inicial" />

    <Button
        android:id="@+id/jogar"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/jogar" />

    <Button
        android:id="@+id/ranking"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ranking" />

    <Button
        android:id="@+id/opcoes"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/opcoes" />

    <Button
        android:id="@+id/ajuda"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ajuda" />

    <Button
        android:id="@+id/sair"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sair" />
    

</LinearLayout>