<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/sub_menu_jogar"
        android:textColor="#FFFFFF"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/edittext_adedonha"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:inputType="textPersonName"
        android:maxLength="12"
        android:soundEffectsEnabled="true" />

    <LinearLayout
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/cancelar_adedonha"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/cancelar" />

        <Button
            android:id="@+id/limpar_adedonha"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/limpar" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/nivel_adedonha"
        android:textColor="#FFFFFF"
        android:textSize="16dp" />

    <LinearLayout
        android:id="@+id/group2"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content" >

        <Spinner
            android:id="@+id/spinner_nivel_adedonha"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:prompt="@string/tema_dic" />

        <Button
            android:id="@+id/botao_confirmar_adedonha"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/confirmar" />
    </LinearLayout>

</LinearLayout>