<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:text="@string/sub_menu_jogar" />
    
    <EditText
        android:id="@+id/edittext"
        android:layout_marginTop="30dp"
        android:maxLength="12"
        android:soundEffectsEnabled="true"
        android:inputType="textPersonName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    
     <LinearLayout
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    
	     <Button
	        android:id="@+id/confirmar"
	        android:layout_width="105dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="left"
	        android:text="@string/confirmar" />
	    
	     <Button
	        android:id="@+id/cancelar"
	        android:layout_width="105dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:text="@string/cancelar" />
	     
	     <Button
	        android:id="@+id/limpar"
	        android:layout_width="105dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:text="@string/limpar" />
	     
	 </LinearLayout>
	 
     <ImageView
        android:id="@+id/imageViewSubMenuJogar"
        android:contentDescription="@string/ajuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:src="@drawable/android" />

</LinearLayout>