<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:textSize="16dp"
        android:text="@string/sub_menu_jogar" />
    
    <EditText
        android:id="@+id/edittext_dicionario"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:inputType="textPersonName"
        android:maxLength="12"
        android:soundEffectsEnabled="true" />
    
     <LinearLayout
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
	    
	     <Button
	         android:id="@+id/cancelar_dicionario"
	         android:layout_width="91dp"
	         android:layout_height="wrap_content"
	         android:layout_gravity="right"
	         android:text="@string/cancelar" />
	     
	     <Button
	         android:id="@+id/limpar_dicionario"
	         android:layout_width="89dp"
	         android:layout_height="wrap_content"
	         android:layout_gravity="bottom"
	         android:text="@string/limpar" />
	     
	 </LinearLayout>
	 
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:layout_marginTop="20dp"
        android:textSize="16dp"
        android:text="@string/tema_dic" />

     <Spinner
         android:id="@+id/spinner_tema_dicionario"
         android:prompt="@string/tema_dic"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />

     <Button
         android:id="@+id/botao_confirmar_dicionario"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
         android:text="@string/confirmar" />
	 
     <ImageView
        android:id="@+id/imageViewSubMenuJogar"
        android:contentDescription="@string/ajuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:src="@drawable/android" />

</LinearLayout>