<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/hello_app_adedonha"
        android:textColor="#FFFFFF" />

    <ImageView
        android:id="@+id/imageViewTelaPrincipal"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/ajuda"
        android:src="@drawable/adedonha_v10" />

    <Button
        android:id="@+id/jogar_adedonha"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/jogar"
        android:textColor="#000000"
        android:textSize="19dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ranking_adedonha"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ranking"
        android:textColor="#000000"
        android:textSize="19dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ajuda_adedonha"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ajuda"
        android:textColor="#000000"
        android:textSize="19dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/sair_adedonha"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sair"
        android:textColor="#000000"
        android:textSize="19dp"
        android:textStyle="bold" />

</LinearLayout>