<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_bluetooth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/modo_jogo"
        android:textSize="17dp"
        android:textStyle="bold"
        android:textColor="#363636" />
    
    <Button
        android:id="@+id/button_servidor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textSize="17dp"
        android:textStyle="bold"
        android:text="@string/servidor" />

    <Button
        android:id="@+id/button_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:textStyle="bold"
        android:text="@string/cliente" />

</LinearLayout>