<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_respostas" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/source_txt_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="40dp"
            android:text="@string/about_us"
            android:textColor="#363636"
            android:textSize="19dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="7dp"
            android:text="@string/name_heitor"
            android:textColor="#363636"
            android:textSize="19dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/name_tiago"
            android:textColor="#363636"
            android:textSize="19dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/name_gui"
            android:textColor="#363636"
            android:textSize="19dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/link_site"
            android:autoLink="web"
            android:layout_marginTop="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:textColor="#363636"
            android:textSize="19dp"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>