<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/sub_menu_jogar"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/caixadetexto_opcoes_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:inputType="textPersonName"
        android:maxLength="5"
        android:soundEffectsEnabled="true" />

    <Button
        android:id="@+id/botao_cancelar_opcoes_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/cancelar"
        android:textSize="19dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

    </LinearLayout>

    <Button
        android:id="@+id/botao_limpar_opcoes_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/limpar"
        android:textSize="19dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/group2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

    </LinearLayout>

    <Button
        android:id="@+id/botao_confirmar_opcoes_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00"
        android:text="@string/confirmar"
        android:textSize="19dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/group3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >
    </LinearLayout>

</LinearLayout>